[package]
name = "eve_item_configurator_gcstorage_accessor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eve_item_configurator_server = { git = "https://github.com/WiggidyW/eve_item_configurator_server_rs.git" }
google-cloud-storage = { version = "0.11.1" }
google-cloud-default = { version = "0.3.0", features = ["storage"] }
google-cloud-auth = { version = "0.10.0" }
serde_yaml = { version = "0.9" }
serde_json = { version = "1.0" }
serde = { version = "1.0" }
